# fregate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  PUBLISH.md  README.md  Review.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: log_filter.rs  log_fmt.rs
examples/configuration/: Cargo.toml  app.yaml
examples/configuration/src/: main.rs
examples/deserialize_ext/: Cargo.toml
examples/deserialize_ext/src/: main.rs
examples/examples_resources/: Cargo.toml  build.rs
examples/examples_resources/certs/: cert.pem  identity.pfx  key.pem  openssl.conf  server.crt  server.key  tls.cert  tls.key
examples/examples_resources/src/: grpc.rs  lib.rs
examples/examples_resources/src/proto/: echo.rs  hello.rs  mod.rs
examples/grafana/: Cargo.toml  README.md
examples/grafana/src/: client.rs  server.rs
examples/health/: Cargo.toml
examples/health/src/: main.rs
examples/hello-tonic/: Cargo.toml  README.md  otel-config.yaml
examples/hello-tonic/src/: client.rs  server.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/http-proxy/: Cargo.toml
examples/http-proxy/src/: main.rs
examples/log-level-change/: Cargo.toml
examples/log-level-change/src/: main.rs
examples/metrics-callback/: Cargo.toml
examples/metrics-callback/src/: main.rs
examples/native-tls/: Cargo.toml
examples/native-tls/src/: client.rs  main.rs  server.rs
examples/observability/: Cargo.toml
examples/observability/src/: main.rs
examples/proxy-layer/: Cargo.toml
examples/proxy-layer/src/: main.rs
examples/reflection/: Cargo.toml  build.rs
examples/reflection/src/: echo.rs  main.rs
examples/rustls/: Cargo.toml
examples/rustls/src/: client.rs  server.rs
examples/tls/: Cargo.toml
examples/tls/src/: client_native_tls.rs  client_rustls.rs  server.rs
examples/tonic/: Cargo.toml  build.rs
examples/tonic-native-tls/: Cargo.toml
examples/tonic-native-tls/src/: main.rs
examples/tonic-tls/: Cargo.toml
examples/tonic-tls/src/: main.rs
examples/tonic/proto/: echo.proto
examples/tonic/src/: main.rs
src/: app.rs  application.rs  bootstrap.rs  builder.rs  configuration.rs  error.rs  extensions.rs  health.rs  lib.rs  middleware.rs  observability.rs  static_assert.rs  sugar.rs  telemetry.rs  utils.rs
src/application/: app.rs  bootstrap.rs  configuration.rs  error.rs  health.rs  log_fmt.rs  log_marker.rs  logging.rs  management.rs  metrics.rs  proxy_router.rs  tls.rs  tls_config.rs  tracing.rs  tracing_fields.rs  version.rs
src/application/app/: native_tls_impl.rs  tls.rs
src/application/configuration/: headers.rs  tls.rs
src/application/metrics/: tokio_metrics.rs
src/axum_ext/: response.rs
src/builder/: configuration.rs  health.rs  metrics.rs  mod.rs  router.rs  tracing.rs
src/configuration/: application.rs  management.rs  observability.rs  source.rs  tls.rs
src/extensions/: axum_ext.rs  axum_tonic.rs  config_ext.rs  headers_ext.rs  http_req_ext.rs  reqwest_ext.rs  sanitize_ext.rs  serde_ext.rs  tonic_ext.rs
src/middleware/: logging.rs  proxy.rs  proxy_layer.rs  tracing.rs
src/middleware/proxy_layer/: error.rs  layer.rs  service.rs  shared.rs
src/middleware/tracing/: common.rs  config.rs  grpc_req.rs  http_req.rs
src/middlewares/: logging.rs
src/observability/: headers_filter.rs  metrics.rs  tracing.rs
src/observability/metrics/: cgroupv2.rs  proc_limits.rs  recorder.rs  sys_info.rs  tokio_metrics.rs
src/observability/tracing/: event_formatter.rs  floor_char_boundary.rs  log_layer.rs  otlp_layer.rs  tracing_fields.rs  writer.rs
src/resources/: default_conf.toml  openapi.yaml
src/sugar/: grpc.rs  grpc_codes.rs  hash_builder.rs  yaml_response.rs
src/sugar/grpc/: codes.rs
src/utils/: configuration.rs  health.rs  logging.rs  proxy.rs  router.rs
tests/: app_config.rs  app_config_from_env.rs  app_config_source_order.rs  app_config_tls.rs  bootstrap.rs  bootstrap_multiple_calls.rs  default_headers_ext.rs  exclude_all.rs  exclude_one.rs  headers_ext.rs  include_all.rs  include_one.rs  log_fmt.rs  native_tls.rs  sanitize_all.rs  sanitize_initialised.rs  sanitize_one.rs  sanitize_uninitialised.rs  sugar_grpc_codes.rs  tls.rs  traing_fields.rs
tests/resources/: test_conf.toml
