[package]
name = "fregate"
version = "0.4.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/elefant-dev/fregate-rs"
homepage = "https://github.com/elefant-dev/fregate-rs"
description = "Framework for services creation"
categories = ["web-programming"]
keywords = ["http", "grpc", "service"]

[workspace]
members = ["examples/*"]

[features]
tls = []
use_native_tls = [
    "tls",
    "reqwest/native-tls",
    "tokio-native-tls",
    "async-stream",
    "futures-util",
    "tokio/fs",
    "tokio/net",
    "tokio-stream"
]
use_native_tls_vendored = [
    "use_native_tls",
    "reqwest/native-tls-vendored",
    "native-tls/vendored"
]
use_rustls = [
    "tls",
    "opentelemetry-zipkin/reqwest-rustls",
    "tokio-rustls",
    "rustls-pemfile",
    "async-stream",
    "futures-util",
    "tokio/fs",
    "tokio/net",
    "tokio-stream"
]
use_rustls_tls12 = [
    "tls",
    "use_rustls",
    "tokio-rustls/tls12"
]

[dependencies]
axum = { version = "0.5.7", features = ["headers", "http1", "http2", "json", "matched-path", "original-uri", "ws"] }
bytes = "1"
config = "0.13.1"
reqwest = { version = "0.11", default-features = false }
http-body = "0.4.4"
hyper = { version = "0.14", features = ["full"] }
thiserror = "1.0.31"
once_cell = "1.13.0"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
pin-project-lite = "0.2.9"
sealed = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.11.0"
time = "0.3.14"
tokio = { version = "1.0", features = ["signal"] }
tonic = "0.8.0"
tower = { version = "0.4" }
tower-http = "0.3"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt", "time", "registry"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-otlp = { version = "0.11.0" }
opentelemetry-http = "0.7.0"
opentelemetry-zipkin = { version = "0.16.0", default-features = false, features = ["reqwest-client"] }
valuable = "0.1.0"
valuable-serde = "0.1.0"

tokio-metrics = { version = "0.1.0", optional = true }

# common deps for tls
async-stream = { version = "0.3.3", optional = true }
futures-util = { version = "0.3.25", optional = true }
tokio-stream = { version = "0.1.11", optional = true, features = ["net"] }
# native-tls deps
native-tls = { version = "0.2.10", optional = true, features = ["alpn"] }
tokio-native-tls = { version = "0.3.0", optional = true }
# rustls deps
rustls-pemfile = { version = "1.0.1", optional = true }
tokio-rustls = { version = "0.23.4", optional = true, default-features = false, features = ["logging"] }

[dev-dependencies]
valuable-derive = "0.1.0"
rustls = { version = "0.20.7", features = ["tls12", "dangerous_configuration"] }
hyper-rustls = { version = "0.23.0", default-features = false, features = ["native-tokio", "http1", "tls12"] }
