[package]
name = "grafana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
fregate = { path = "../.." }
tracing = "0.1.36"
tokio = { version = "1.0", features = ["full"] }
prost = "0.11.0"
tonic = "0.8.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "trace"]}
tracing-opentelemetry = "0.18.0"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
