[package]
name = "grafana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
fregate = { path = "../.." }
resources = { path = "../examples_resources" }
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "trace"]}
tracing-opentelemetry = "0.18.0"
