[package]
name = "grafana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
fregate = { path = "../..", features = ["reqwest", "tokio-metrics"] }
resources = { path = "../examples_resources" }

opentelemetry = { version = "0.18.*", features = ["rt-tokio", "trace"]}
reqwest = "0.11.*"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-opentelemetry = "0.18.*"
