[package]
name = "examples-health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fregate = { path = "../.." }
async-trait = "0.1.57"
axum  = '0.5.1'
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.29"
