[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fregate = { path = "../.." }
axum  = '0.5.1'
hyper = "0.14.18"
tokio = { version = "1.0", features = ["full"] }
tower =  { version = "0.4.12" }
tracing = "0.1.29"
