[package]
name = "examples-observability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fregate = { path = "../.." }
axum  = '0.5.1'
axum-extra = "0.2.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "fmt", "json", "time","tracing-log"] }