[package]
name = "tls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
fregate = { path = "../..", features = ["native-tls"] }
resources = { path = "../examples_resources" }
tokio = { version = "1.0", features = ["net"] }
hyper-tls = "0.5.0"

tonic-reflection = "0.5.0"
