[package]
name = "tls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client-native-tls"
path = "src/client_native_tls.rs"
# TODO: https://github.com/rust-lang/rfcs/pull/2887
required-features = ["hyper-tls"]

[[bin]]
name = "client-rustls"
path = "src/client_rustls.rs"
# TODO: https://github.com/rust-lang/rfcs/pull/2887
required-features = ["hyper-rustls", "rustls"]

[dependencies]
fregate = { path = "../..", features = ["use_native_tls"] }
#fregate = { path = "../..", features = ["rustls"] }
#fregate = { path = "../..", features = ["rustls-tls12"] }
resources = { path = "../examples_resources" }

tokio = { version = "1.0", features = ["net"] }
hyper-tls = { version = "0.5.0", optional = true }
hyper-rustls = { version = "0.23.0", optional = true }
rustls = { version = "0.20.7", optional = true, features = ["tls12", "dangerous_configuration"] }

tonic-reflection = "0.5.0"
