[package]
name = "tls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client-native-tls"
path = "src/client_native_tls.rs"
# TODO: https://github.com/rust-lang/rfcs/pull/2887
required-features = ["hyper-tls"]

[[bin]]
name = "client-rustls"
path = "src/client_rustls.rs"
# TODO: https://github.com/rust-lang/rfcs/pull/2887
required-features = ["hyper-rustls", "rustls"]

[dependencies]
fregate = { path = "../..", features = ["use_native_tls"] }
#fregate = { path = "../..", features = ["use_rustls"] }
#fregate = { path = "../..", features = ["use_rustls_tls12"] }
resources = { path = "../examples_resources" }

hyper-rustls = { version = "0.24.*", optional = true }
hyper-tls = { version = "0.5.*", optional = true }
rustls = { version = "0.21.*", optional = true, features = ["tls12", "dangerous_configuration"] }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
tonic-reflection = "0.9.*"
