[package]
name = "tonic-native-tls"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["fregate/native-tls"]
native-tls-vendored = ["fregate/native-tls-vendored"]

[dependencies]
fregate = { path = "../..", features = ["native-tls"] }
resources = { path = "../examples_resources" }
