[package]
name = "tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fregate = { path = "../.." }
tracing = "0.1.36"
tokio = { version = "1.0", features = ["full"] }
prost = "0.11.0"
tonic = "0.8.0"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
